fix: banner overlaps adornment banners

--- a/v3/src/components/graph/adornments/measures-for-selection-banner.scss
+++ b/v3/src/components/graph/adornments/measures-for-selection-banner.scss
@@ -8,15 +8,11 @@
   flex-direction: column;
   font: 12px "MuseoSans-500", sans-serif;
   justify-content: center;
-  left: 0;
   line-height: 1;
   min-height: 22px;
   overflow: hidden;
   padding: 0 5px;
   pointer-events: all;
-  position: absolute;
   text-align: left;
-  top: 0;
   width: calc(100% - 10px);
-  z-index: 5;
 }
